<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/partial_toolbar" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include
            layout="@layout/partial_progress_bar"
            android:visibility="gone" />
        <ScrollView
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_change_password_activity_old_password"
                    style="@style/TextInputLayout">
                    <EditText
                        android:id="@+id/et_change_password_activity_old_password"
                        android:inputType="textPassword"
                        android:hint="@string/et_hint_change_password_activity_old_password"
                        style="@style/EditText" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_change_password_activity_new_password"
                    style="@style/TextInputLayout">
                    <EditText
                        android:id="@+id/et_change_password_activity_new_password"
                        android:inputType="textPassword"
                        android:hint="@string/et_hint_change_password_activity_new_password"
                        style="@style/EditText" />
                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/btn_change_password_activity_submit"
                    android:text="@string/btn_change_password_activity_submit"
                    style="@style/ButtonForm" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</LinearLayout>